# geonode-datacite

./: README.md  setup.cfg  setup.py
geonode_datacite/: __init__.py  admin.py  apps.py  forms.py  handler.py  models.py  permissions.py  tests.py  utils.py
geonode_datacite/api/: handler.py  metadata.py
geonode_datacite/migrations/: 0001_initial.py  0002_alter_datacite_options_and_more.py  0003_remove_datacite_detail.py  0004_datacite_state.py
geonode_datacite/templates/: create_doi.json
geonode_datacite/templates/admin/client/: change_list.html  confirmation.html
