[metadata]
name = geonode-datacite
version = 0.0.1
author = geosolutions-it
author_email = info@geosolutionsgroup.com
url = https://github.com/geosolutions-it/geonode-datacite
project_urls =
    Bug Tracker = https://github.com/geosolutions-it/geonode-datacite/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License

[flake8]
max-line-length = 200
exclude=geonode/*/migrations/*,scripts,docs,static,migrations,node_modules
extend-ignore=E122,E124